--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,9 @@
 
 en:
   hello: "Hello world"
+
+gist:
+  success: "Successfully created gist."
+  failure: "Something went wrong. Try again later."
+  description: "A %{question} question from %{title} by TestGuru"
+  file_name: "test-guru-question.txt"
